# vecdb

./: .gitignore  README.md  pyproject.toml
src/vecdb/: __init__.py  db.py  embeddings.py  server.py
test/: test2.py  vecdb
tests/: .env.template  test.py
