
[project]

name = "vecdb"

version = "0.1.0"

description = "Vector database for openai's embeddings"

readme = "README.md"

requires-python = ">=3.9"

license = {file = "LICENSE"}

authors = [
    {name = "Josh Smith", email = "jsmith@purplelemons.dev"}
]

dependencies = [
    "numpy",
    "openai>=1.2",
]

#[tool.setuptools]
#packages = ["src.vecdb"]
